<resources>
    <string name="app_name">World CUP 2018</string>
    <string name="liverpool">Liverpool</string>
    <string name="score_separator">-</string>
    <string name="match_date">27 Aug 22</string>
    <string name="search">Search</string>
    <string name="match_details">Match Details</string>
    <string name="match_statistic">Match Statistic</string>
    <string name="_5">5</string>
    <string name="chelsea">Chelsea</string>
    <string name="half_time_goals">Half-Time Goals</string>
    <string name="_6">6</string>
    <string name="_0">0</string>
    <string name="_4">4</string>
    <string name="todo">TODO</string>
    <string name="_2">2</string>
    <string name="shots">Shots</string>
    <string name="_3">3</string>
    <string name="fouls">Fouls</string>
    <string name="corners">Corners</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="_1">1</string>
    <string name="red_card">Red Card</string>
</resources>