<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/margin24"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/search_height"
        android:layout_margin="@dimen/margin24"
        android:autofillHints=" "
        android:drawableStart="@drawable/baseline_search_24"
        android:drawablePadding="@dimen/padding8"
        android:background="@drawable/search_bar"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        android:hint="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIconTint="@color/light_gray"
        app:strokeColor="@color/light_gray"
        tools:ignore="SpeakableTextPresentCheck,TextFields,TouchTargetSizeCheck,TextContrastCheck,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/match_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:text="@string/match_details"
        android:textColor="@color/secondary_black_87"
        android:textSize="@dimen/text22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/search"
        app:layout_constraintStart_toStartOf="@id/search"
        app:layout_constraintTop_toBottomOf="@id/search" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/match_details">

        <LinearLayout
            android:id="@+id/primary_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:weightSum="3"
            app:layout_constraintEnd_toEndOf="@id/main_layout"
            app:layout_constraintStart_toStartOf="@id/main_layout"
            app:layout_constraintTop_toTopOf="@id/main_layout"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/home_team_photo"
                    android:layout_width="@dimen/padding64"
                    android:layout_height="@dimen/margin64"
                    android:layout_gravity="center"
                    android:src="@drawable/team"
                    app:shapeAppearanceOverlay="@style/Widget" />

                <TextView
                    android:id="@+id/home_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/madrid"
                    android:textSize="@dimen/text16"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/match_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/match_date"
                    android:textColor="@color/dark_gray"
                    android:textSize="@dimen/text16"
                    tools:ignore="TextContrastCheck" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="3"
                    android:layout_marginTop="@dimen/margin16"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/home_team_full_time_goals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/_0"
                        android:textStyle="bold"
                        android:textColor="@color/secondary_black_87"
                        android:textSize="@dimen/text24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/score_separator"
                        android:textSize="@dimen/text16"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/away_team_full_time_goals"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:text="@string/_4"
                        android:textStyle="bold"
                        android:textColor="@color/secondary_black_87"
                        android:textSize="@dimen/text24" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/away_team_photo"
                    android:layout_width="@dimen/padding64"
                    android:layout_height="@dimen/margin64"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    android:src="@drawable/barcelona"
                    app:shapeAppearanceOverlay="@style/Widget" />

                <TextView
                    android:id="@+id/away_team_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Barcelona"
                    android:textSize="@dimen/text16"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/match_statistic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin32"
        android:text="@string/match_statistic"
        android:textColor="@color/secondary_black_87"
        android:textSize="@dimen/text16"
        app:layout_constraintEnd_toEndOf="@id/main_layout"
        app:layout_constraintStart_toStartOf="@id/main_layout"
        app:layout_constraintTop_toBottomOf="@id/main_layout" />

    <ImageView
        android:id="@+id/left"
        android:layout_width="@dimen/margin32"
        android:layout_height="@dimen/margin32"
        android:layout_marginEnd="@dimen/margin32"
        app:layout_constraintBottom_toBottomOf="@+id/match_statistic"
        app:layout_constraintEnd_toStartOf="@+id/match_statistic"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow_left"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/right"
        android:layout_width="@dimen/margin32"
        android:layout_height="@dimen/margin32"
        android:layout_marginStart="@dimen/margin32"
        app:layout_constraintBottom_toBottomOf="@+id/match_statistic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/match_statistic"
        app:srcCompat="@drawable/arrow_right"
        android:importantForAccessibility="no" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_statistic"
        app:layout_constraintVertical_bias="0.063">

        <LinearLayout
            android:id="@+id/secondary_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin24"
            android:orientation="vertical"
            android:weightSum="8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/match_statistic">

            <LinearLayout
                android:id="@+id/first_linear_layout"
                style="@style/second_linear_layout">

                <TextView
                    android:id="@+id/home_team_half_time_goals"
                    style="@style/First_Linearlayouts"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/half_time_goals"
                    style="@style/Secondary_Linearlayouts"
                    android:text="@string/half_time_goals"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/away_team_half_time_goals"
                    style="@style/Third_Linearlayouts"
                    android:text="@string/_4" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_linear_layout"
                style="@style/second_linear_layout">

                <TextView
                    android:id="@+id/home_team_shots"
                    style="@style/First_Linearlayouts"
                    android:text="@string/_2" />

                <TextView
                    android:id="@+id/shots"
                    style="@style/Secondary_Linearlayouts"
                    android:text="@string/shots"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/away_team_shots"
                    style="@style/Third_Linearlayouts"
                    android:text="@string/_3" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/forth_linear_layout"
                style="@style/second_linear_layout">

                <TextView
                    android:id="@+id/home_team_fouls"
                    style="@style/First_Linearlayouts"
                    android:text="@string/_2" />

                <TextView
                    android:id="@+id/fouls"
                    style="@style/Secondary_Linearlayouts"
                    android:text="@string/fouls"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/away_team_fouls"
                    style="@style/Third_Linearlayouts"
                    android:text="@string/_6" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fifth_linear_layout"
                style="@style/second_linear_layout">

                <TextView
                    android:id="@+id/home_team_corners"
                    style="@style/First_Linearlayouts"
                    android:text="@string/_0" />

                <TextView
                    android:id="@+id/corners"
                    style="@style/Secondary_Linearlayouts"
                    android:text="@string/corners"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/away_team_corners"
                    style="@style/Third_Linearlayouts"
                    android:text="@string/_6" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/yellow_cardsth_linear_layout"
                style="@style/second_linear_layout">

                <TextView
                    android:id="@+id/home_team_yellow_cards"
                    style="@style/First_Linearlayouts"
                    android:text="@string/_3" />

                <TextView
                    android:id="@+id/yellow_cards"
                    style="@style/Secondary_Linearlayouts"
                    android:text="@string/yellow_card"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/away_team_yellow_cards"
                    style="@style/Third_Linearlayouts"
                    android:text="@string/_1" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/red_cardsth_linear_layout"
                style="@style/second_linear_layout">

                <TextView
                    android:id="@+id/home_team_red_cards"
                    style="@style/First_Linearlayouts"
                    android:layout_height="wrap_content"
                    android:text="@string/_5" />

                <TextView
                    android:id="@+id/red_cards"
                    style="@style/Secondary_Linearlayouts"
                    android:text="@string/red_card"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:id="@+id/away_team_red_cards"
                    style="@style/Third_Linearlayouts"
                    android:text="@string/_3" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>